--- a/pratica/projeto_google_glass/_css/estilo.css
+++ b/pratica/projeto_google_glass/_css/estilo.css
@@ -22,7 +22,7 @@ div#interface {
     padding: 10px 30px 10px 30px;
 }
 
-header#cabecalho figure#icone, header#cabecalho figure#icone-specs {
+header#cabecalho figure#icone {
     position: absolute;
     left: 1250px;
     top: 50px;
@@ -52,84 +52,6 @@ header#cabecalho h2 {
     color: #888888;
     padding: 0;
     margin-top: 0px;
-}
-
-/* Formatação de imagens com legendas */
-
-figure.foto-legendada {
-    /* Vamos trabalhar com a classe "foto-legendada" */
-    position: relative;
-    border: 8px solid white;
-    box-shadow: 1px 1px 4px black;
-}
-
-figure.foto-legendada img {
-    /* Mudando a exibição da imagem da classe para 100% */
-    width: 100%;
-    height: 100%;
-}
-
-figure.foto-legendada figcaption {
-    /* Mudando atributos da legenda da classe */
-    font-size: large;
-    opacity: 0;
-    position: absolute;
-    top: 0px;
-    background-color: rgba(0, 0, 0, .4);
-    color: white;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    transition: opacity 1s;
-}
-
-figure.foto-legendada:hover figcaption {
-    /* Usamos "hover" para dizer que uma mudança ocorrerá quando o mouse passar
-     por cima da imagem. */
-    opacity: 1;
-}
-
-/* Formatação do Menu */
-
-nav#menu {
-    display: block;
-}
-
-nav#menu ul {
-    list-style: none;
-    text-transform: uppercase;
-    position: absolute;
-    top: -20px;
-    left: 800px;
-}
-
-nav#menu li {
-    display: inline-block;
-    background-color: rgba(179, 206, 228, 0.3);
-    padding: 10px;
-    margin: 2px;
-}
-
-nav#menu li:hover {
-    transition: background-color 0.5s;
-    background-color: rgba(0, 0, 0, 1);
-}
-
-nav#menu li:hover>a {
-    transition: background-color 0.5s;
-    transition: color 0.5s;
-    color: rgba(255, 255, 255, 1);
-    text-decoration: underline;
-}
-
-nav#menu h1 {
-    display: none;
-}
-
-nav#menu a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
 }
 
 /* Configuração da section corpo */
@@ -176,46 +98,6 @@ header#cabecalho-artigo h3 span {
     text-align: right;
 }
 
-table#especificacoes {
-    border: 1px solid #606060;
-    border-spacing: 0px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-table#especificacoes caption {
-    color: #888888;
-    font-size: 13pt;
-    font-weight: bold;
-}
-
-table#especificacoes caption span {
-    display: block;
-    float: right;
-    color: black;
-    font-size: 10pt;
-    margin-top: 8px;
-    font-weight: normal;
-}
-
-table#especificacoes td {
-    border: 1px solid #606060;
-    padding: 10px;
-}
-
-table#especificacoes td.titulo {
-    text-align: right;
-    color: white;
-    background-color: #606060;
-    font-weight: normal;
-    vertical-align: top;
-}
-
-table#especificacoes td.dado {
-    text-align: center;
-    background-color: #cfcfcf;
-}
-
 aside#lateral {
     background-color: #cfcfcf;
     display: block;
@@ -251,14 +133,4 @@ footer#rodape {
 
 footer#rodape p {
     text-align: center;
-}
-
-/* Configurações da seção corpo da página specs.html */
-
-section#corpo-specs h1 {
-    background-color: rgba(255, 255, 255, 0);
-}
-
-header#cabecalho figure#icone-specs {
-    top: 40px;
 }
